src/app/_styles.scss
/*
 * Misc styling.
 *
 * This includes all styles that fit nowhere else.
 */

* {
    text-overflow: ellipsis;
    word-wrap: break-word;

    // This is what separates the men from the boys.
    min-width: 0;
}

a {
    text-decoration: none;
    cursor: pointer;
}

blockquote {
    margin-left: 18px;
    padding-left: 18px;
    border-left: 4px solid $primary-bg;
}

blockquote.accent {
    border-left-color: $accent-bg;
}

blockquote > p:last-child {
    margin-bottom: 0;
}

body {
    margin: 0;
    color: black;
    background-color: white;
    word-wrap: break-word;
}

button, .button {
    @extend .truncate;

    margin: 6px 8px!important;
    padding: 0 8px!important;
}

file {
    td-file-input button {
        flex-grow: 1;
    }

    td-file-input > div {
        display: flex;
    }
}

img {
    vertical-align: top;
}

insight {
    mat-cell:not(:first-child), mat-header-cell:not(:first-child) {
        text-align: right;
    }
}

mat-card {
    padding: 24px!important;

    .mat-card-image {
        margin: 0 -24px 16px -24px!important;
        width: calc(100% + 48px)!important;

        img {
            width: 100%;
        }
    }

    .mat-card-image:first-child {
        margin-top: -24px!important;
    }
}

mat-card-content p {
    text-overflow: clip;
}

mat-card-footer {
    display: flex!important;
    justify-content: flex-end;
}

mat-card-footer > * {
    margin-top: 0 !important;
    margin-bottom: 0 !important;
}

mat-dialog-actions, .app-snackbar-actions {
    padding: 12px 0;
    display: flex;
    flex-direction: row-reverse;
    flex-wrap: wrap;
}

mat-dialog-container {
    margin: auto;
}

mat-dialog-container > * {
    width: 100%;
    height: 100%;
    display: flex;
    flex-direction: column;
}

mat-dialog-container > * > * {
    flex-shrink: 0;
}

mat-dialog-container > * > mat-dialog-content {
    flex-grow: 1;
    flex-shrink: 1;
    margin-top: -16px!important;
    margin-bottom: -16px!important;
    padding-top: 16px!important;
    padding-bottom: 16px!important;
}

mat-icon {
    vertical-align: middle;
}

mat-input-container {
    width: 100%!important;
}

mat-sidenav-container > * {
    display: flex!important;
    flex-direction: column;
    height: 100vh!important;
}

mat-sidenav-container .mat-sidenav-content {
    overflow: hidden;
}

nav, aside, main {
    overflow-x: hidden;
    overflow-y: scroll;
}

mat-spinner {
    margin: auto;
}

mat-grid-tile {
    @include shade($primary-palette, $primary-medium-shade);
    cursor: pointer;
    a { color: $primary-fg; }
}

mat-grid-tile:hover {
    @include shade($primary-palette, $primary-light-shade);
    a { color: $primary-light-fg; }
}

mat-tab-body, .mat-tab-body-content {
    overflow: hidden!important;
}

mat-tab-header {
    .mat-tab-label-container {
        justify-content: center;
    }

    .mat-tab-list {
        flex-grow: 0;
    }
}

mat-toolbar {
    @include shade($primary-palette, $primary-medium-shade);
    button, .button { color: white!important; }
}

profile .mat-card-header-text > mat-card-title {
    @extend .truncate;
}

snack-bar-container {
    color: white;
}

td-file-upload {
    button {
        margin: 0!important;
    }

    .td-file-upload-cancel {
        overflow: visible;
        width: 0!important;
        padding: 0!important;
        flex-grow: 0;
    }
}

video {
    width: 100%;
    object-fit: cover;
}

[app-content] > div,
.app-toolbar-title,
h1 > small > span,
h1 > span,
mat-card-footer > *,
.separator {
    @extend .pad;
}

[app-content] {
    margin: auto;
    margin-top: 0;
    max-width: 1600px;
    width: 100%;
    height: 100%;
}

[app-content] .positioning-anchor * {
    pointer-events: all;
}

[mat-button], [mat-raised-button] {
    text-transform: uppercase;
}

.app-action {
    @extend .pad;
    display: inline-block;
    position: absolute;
    bottom: 0;
    right: 0;
}

.app-icon-button {
  box-shadow: none;
  user-select: none;
  background: none;
  border: none;
  cursor: pointer;
  filter: none;
  font-weight: normal;
  height: auto;
  line-height: inherit;
  margin: 0;
  min-width: 0;
  padding: 0;
  text-align: left;
  text-decoration: none;
}

.app-toolbar-filler {
    flex: 1 1 auto;
}

.clear, page div {
    clear: both;
}

.flex {
    display: flex;
}

.flex-2-cols {
    width: 100% * 2 / 12;
}

.flex-3-cols {
    width: 100% * 3 / 12;
}

.flex-4-cols {
    width: 100% * 4 / 12;
}

.flex-5-cols {
    width: 100% * 5 / 12;
}

.flex-6-cols {
    width: 100% * 6 / 12;
}

.flex-7-cols {
    width: 100% * 7 / 12;
}

.flex-8-cols {
    width: 100% * 8 / 12;
}

.flex-9-cols {
    width: 100% * 9 / 12;
}

.flex-10-cols {
    width: 100% * 10 / 12;
}

.hidden {
    display: none;
}

.invisible {
    opacity: 0;
}

.pad {
    margin: 24px;
}

.picture {
    margin-left: -24px;
    margin-right: -24px;
    margin-top: -24px;
    margin-bottom: 24px;
}

.picture img {
    width: 100%;
}

.text-accent {
    color: $accent-bg;
}

.text-primary {
    color: $primary-bg;
}

.text-warn {
    color: $warn-bg;
}

.truncate {
    overflow: hidden;
    white-space: nowrap;
}

.wrap {
    flex-wrap: wrap;
}

#aside {
    width: 600px;
}

#displacer-target {
    position: absolute;
    width: 100%;
    height: 100%;
    pointer-events: none;
    z-index: 2;
}

#displacer-target > * {
    position: absolute;
    width: 100%;
    height: 100%;
}

#nav {
    width: 480px;
}

#preload_content {
    width: 35em;
    margin: 0 auto;
}

/*
 * All mobile devices.
 */
@media (max-width: 1263px) {
    .grid {
        margin: 0;
    }
}

/*
 * All handsets.
 */
@media (max-width: 959px) and (max-height: 599px), (max-width: 599px) {
    .pad {
        margin: 16px;
    }

    .picture {
        margin-left: -16px;
        margin-right: -16px;
        margin-top: -16px;
        margin-bottom: 16px;
    }
}

/*
 * Handsets and small tablets in portrait mode, small to medium handsets in 
 * landscape.
 */
@media (max-width: 719px) {
    #preload_content {
        width: 95%;
    }
}

/*
 * Everything except the smallest devices in landscape mode and portrait mode 
 * handsets.
 */
@media (min-width: 600px) {
    #aside .back-btn {
        display: none;
    }
}

/*
 * Handsets in portrait mode, small handsets in landscape mode.
 */
@media (max-width: 599px) {
    #aside {
        width: 100%;
    }

    #aside .close-btn {
        display: none;
    }
}

/*
 * Everything except smaller portrait mode devices.
 */
@media (min-width: 480px) {
    h1 > small {
        float: right;
    }

    .mobile-only {
        display: none;
    }
}

/*
 * Small and medium handsets in portrait mode.
 */
@media (max-width: 479px) {
    #nav {
        width: 80%;
    }

    .desktop-only {
        display: none;
    }
}

